--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "picmi-help",
   "version": "0.1.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "docs:dev": "vitepress dev docs",
@@ -9,8 +10,8 @@
     "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.4",
-    "vitepress-tags": "^0.6.2",
-    "vue": "^3.2.37"
+    "vitepress": "^1.3.4",
+    "vitepress-tags": "^0.6.5",
+    "vue": "^3.5.11"
   }
 }
