--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
+    "sass-embedded": "^1.79.5",
     "vitepress": "^1.3.4",
     "vitepress-tags": "^0.6.5",
     "vue": "^3.5.11"
