--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "vitepress": "^1.3.4",
     "vitepress-tags": "^0.6.5",
     "vue": "^3.5.11"
+  },
+  "dependencies": {
+    "markdown-it-container": "^4.0.0"
   }
 }
